# dachuang

./: BITMAP_SUMMARY.txt  CMakeLists.txt  INDEX_BITMAPS.txt  PROJECT_COMPLETION_REPORT.txt  QUICK_START.h  README_BITMAPS.md  START_HERE.txt  VISUAL_PREVIEW.txt  char_bitmap.h  char_bitmap_example.c  gen_cjk_12x12.py  generate_bitmap.py  generate_bitmap_simple.py  generate_bitmap_v2.py  generate_char_bitmap.py  run_script.bat
.github/workflows/: fetch-data.yml
docs/: PUBLIC_DEPLOY_GUIDE.md  index.html  worker.js
docs/data/: history_env_humi.json  history_env_temp.json  history_lux.json  history_ph.json  history_soil_humi.json  history_soil_temp.json  latest.json  timestamp.json
main/: CMakeLists.txt  ai_config.h  baidu_tts.c  baidu_tts.h  char_bitmap.h  index.html  main.c  max98357a.c  max98357a.h  spark_chat.c  spark_chat.h  st7735_display.c  st7735_display.h
